--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,4 +1,5 @@
 ;METADATA=(Diff=true, UseCommands=true)
+
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -12,5 +13,7 @@ NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Character.Skill.Buff.Damage",DevComment="")
 +GameplayTagList=(Tag="Character.Skill.Buff.MoreDamage",DevComment="")
++GameplayTagList=(Tag="Character.Skill.CoolDown",DevComment="")
++GameplayTagList=(Tag="Character.Skill.CoolDown.NormalAttack",DevComment="")
 +GameplayTagList=(Tag="Character.Skill.NormalAttack",DevComment="")
 
