Skill Register, Solve Client don't Work

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -13,7 +13,11 @@ NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Character.Skill.Buff.Damage",DevComment="")
 +GameplayTagList=(Tag="Character.Skill.Buff.MoreDamage",DevComment="")
++GameplayTagList=(Tag="Character.Skill.Cast",DevComment="")
 +GameplayTagList=(Tag="Character.Skill.CoolDown",DevComment="")
++GameplayTagList=(Tag="Character.Skill.CoolDown.Cast",DevComment="")
 +GameplayTagList=(Tag="Character.Skill.CoolDown.NormalAttack",DevComment="")
++GameplayTagList=(Tag="Character.Skill.Hit",DevComment="")
 +GameplayTagList=(Tag="Character.Skill.NormalAttack",DevComment="")
++GameplayTagList=(Tag="GameplayCue.NormalAttack",DevComment="")
 
