--- a/Saved/Config/WindowsEditor/Game.ini
+++ b/Saved/Config/WindowsEditor/Game.ini
@@ -1,4 +1,8 @@
 ;METADATA=(Diff=true, UseCommands=true)
+[/Script/DeveloperToolSettings.PlatformsMenuSettings]
+StagingDirectory=(Path="D:/Unreal5/MultiplayerRPG/Window")
+PerPlatformBuildConfig=(("Windows", PPBC_DebugGame))
+
 [StartupActions]
 bAddPacks=False
 
