Enemy Healthy Bar UI

--- a/MultiplayerRPG.uproject
+++ b/MultiplayerRPG.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.5",
+	"EngineAssociation": "{695F8D6C-4257-4996-8C61-C6A9E26F30DB}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
@@ -10,7 +10,8 @@
 			"LoadingPhase": "Default",
 			"AdditionalDependencies": [
 				"GameplayAbilities",
-				"Engine"
+				"Engine",
+				"UMG"
 			]
 		}
 	],
