--- a/Saved/Config/WindowsEditor/Game.ini
+++ b/Saved/Config/WindowsEditor/Game.ini
@@ -1,6 +1,6 @@
 ;METADATA=(Diff=true, UseCommands=true)
 [/Script/DeveloperToolSettings.PlatformsMenuSettings]
-StagingDirectory=(Path="D:/Unreal5/MultiplayerRPG/Window")
+StagingDirectory=(Path="D:/Unreal5/MultiplayerRPG")
 PerPlatformBuildConfig=(("Windows", PPBC_DebugGame))
 
 [StartupActions]
