--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,5 +1,4 @@
 ;METADATA=(Diff=true, UseCommands=true)
-
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -9,6 +8,10 @@ AllowGameTagUnloading=False
 FastReplication=False
 bDynamicReplication=False
 InvalidTagCharacters="\"\',"
++GameplayTagRedirects=(OldTagName="Character.Skill.NormalAttack",NewTagName="Character.Skill.SkillAttack")
++GameplayTagRedirects=(OldTagName="Character.Skill.SkillAttack",NewTagName="Character.Skill.HeavyStrike")
++GameplayTagRedirects=(OldTagName="Character.Skill.CoolDown.NormalAttack",NewTagName="Character.Skill.CoolDown.HeavyStrike")
++GameplayTagRedirects=(OldTagName="GameplayCue.NormalAttack",NewTagName="GameplayCue.HeavyStrike")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Character.Skill.Buff.Damage",DevComment="")
@@ -16,8 +19,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Character.Skill.Cast",DevComment="")
 +GameplayTagList=(Tag="Character.Skill.CoolDown",DevComment="")
 +GameplayTagList=(Tag="Character.Skill.CoolDown.Cast",DevComment="")
-+GameplayTagList=(Tag="Character.Skill.CoolDown.NormalAttack",DevComment="")
++GameplayTagList=(Tag="Character.Skill.CoolDown.HeavyStrike",DevComment="")
++GameplayTagList=(Tag="Character.Skill.HeavyStrike",DevComment="")
 +GameplayTagList=(Tag="Character.Skill.Hit",DevComment="")
-+GameplayTagList=(Tag="Character.Skill.NormalAttack",DevComment="")
-+GameplayTagList=(Tag="GameplayCue.NormalAttack",DevComment="")
++GameplayTagList=(Tag="GameplayCue.HeavyStrike",DevComment="")
 
