--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,4 +1,5 @@
 ;METADATA=(Diff=true, UseCommands=true)
+
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -17,10 +18,12 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Character.Skill.Buff.Damage",DevComment="")
 +GameplayTagList=(Tag="Character.Skill.Buff.MoreDamage",DevComment="")
 +GameplayTagList=(Tag="Character.Skill.Cast",DevComment="")
++GameplayTagList=(Tag="Character.Skill.ComboAttack",DevComment="")
 +GameplayTagList=(Tag="Character.Skill.CoolDown",DevComment="")
 +GameplayTagList=(Tag="Character.Skill.CoolDown.Cast",DevComment="")
 +GameplayTagList=(Tag="Character.Skill.CoolDown.HeavyStrike",DevComment="")
 +GameplayTagList=(Tag="Character.Skill.HeavyStrike",DevComment="")
-+GameplayTagList=(Tag="Character.Skill.Hit",DevComment="")
++GameplayTagList=(Tag="Character.State.Die",DevComment="")
++GameplayTagList=(Tag="Character.State.Hit",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.HeavyStrike",DevComment="")
 
