--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -289,17 +289,17 @@ DataDrivenConsoleVariableSettings=InputSettings.Bindings.ActionMappings,InputSet
 DebugCameraControllerSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ComboAttack
 OptimusSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ComboAttack
 EnhancedInputDeveloperSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ComboAttack
-InputModifierSmoothDelta=
-InputModifierDeadZone=
-InputModifierResponseCurveExponential=
-InputModifierFOVScaling=
-InputTriggerDown=
-InputTriggerPressed=
-InputTriggerReleased=
-InputTriggerHold=
-InputTriggerHoldAndRelease=
-InputTriggerTap=
-InputTriggerPulse=
+InputModifierSmoothDelta=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ComboAttack
+InputModifierDeadZone=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ComboAttack
+InputModifierResponseCurveExponential=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ComboAttack
+InputModifierFOVScaling=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ComboAttack
+InputTriggerDown=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ComboAttack
+InputTriggerPressed=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ComboAttack
+InputTriggerReleased=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ComboAttack
+InputTriggerHold=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ComboAttack
+InputTriggerHoldAndRelease=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ComboAttack
+InputTriggerTap=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ComboAttack
+InputTriggerPulse=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ComboAttack
 EnhancedInputEditorProjectSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ComboAttack
 MegascansMaterialParentSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ComboAttack
 InterchangeFbxSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ComboAttack
@@ -391,11 +391,11 @@ PythonScriptPluginSettings=InputSettings.Bindings.ActionMappings,InputSettings.B
 RenderDocPluginSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ComboAttack
 ResonanceAudioSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ComboAttack
 TakeRecorderProjectSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ComboAttack
-MovieSceneTakeSettings=
-TakeRecorderMicrophoneAudioSourceSettings=
-TakeRecorderMicrophoneAudioManager=
-MovieSceneAnimationTrackRecorderEditorSettings=
-TakeRecorderWorldSourceSettings=
+MovieSceneTakeSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ComboAttack
+TakeRecorderMicrophoneAudioSourceSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ComboAttack
+TakeRecorderMicrophoneAudioManager=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ComboAttack
+MovieSceneAnimationTrackRecorderEditorSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ComboAttack
+TakeRecorderWorldSourceSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ComboAttack
 TcpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ComboAttack
 TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ComboAttack
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ComboAttack
@@ -593,7 +593,7 @@ PropertyEditor.TimeStamp=2024.11.30-07.24.16
 PropertyEditor.LastCompileMethod=Unknown
 AnimationModifiers.TimeStamp=2024.11.30-06.50.15
 AnimationModifiers.LastCompileMethod=Unknown
-IoStoreOnDemand.TimeStamp=2024.11.30-07.58.59
+IoStoreOnDemand.TimeStamp=
 IoStoreOnDemand.LastCompileMethod=Unknown
 OpusAudioDecoder.TimeStamp=2024.11.30-07.39.49
 OpusAudioDecoder.LastCompileMethod=Unknown
@@ -1567,8 +1567,8 @@ StructViewer.TimeStamp=2024.11.30-08.01.21
 StructViewer.LastCompileMethod=Unknown
 GraphEditor.TimeStamp=2024.11.30-06.42.10
 GraphEditor.LastCompileMethod=Unknown
-Kismet.TimeStamp=2024.11.30-07.39.57
-Kismet.LastCompileMethod=Unknown
+Kismet.TimeStamp=2024.12.02-16.42.15
+Kismet.LastCompileMethod=External
 KismetWidgets.TimeStamp=2024.11.30-06.09.16
 KismetWidgets.LastCompileMethod=Unknown
 Persona.TimeStamp=2024.11.30-06.50.19
@@ -1809,6 +1809,8 @@ PinnedCommandList.TimeStamp=2024.11.30-06.42.27
 PinnedCommandList.LastCompileMethod=Unknown
 AnimationEditor.TimeStamp=2024.11.30-06.50.04
 AnimationEditor.LastCompileMethod=Unknown
+NullDrv.TimeStamp=2024.11.30-07.59.45
+NullDrv.LastCompileMethod=Unknown
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeHashSet="\"Object\" "
@@ -2304,6 +2306,7 @@ InputTriggerPulse.Trigger Settings=True
 EnhancedInputDeveloperSettings.Trigger Default Values=True
 EnhancedInputEditorProjectSettings.Default=True
 MegascansMaterialParentSettings.Parent Materials=True
+InterchangeFbxSettings.FBX=True
 InterchangeFbxSettings.FBX=True
 InterchangeFbxSettings.FBX=True
 InterchangeFbxSettings.FBX=True
@@ -3446,11 +3449,10 @@ EditableTextBox.Rendering=True
 EditableTextBox.Navigation=True
 EditableTextBox.Localization=True
 EditableTextBox.Events=True
-InterchangeFbxSettings.FBX =True
 WB_MainMenu_C.Default=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=True
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
