--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,17 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Menu/MainMenu.MainMenu
 EditorStartupMap=/Game/Maps/ThirdPersonMap.ThirdPersonMap
-GlobalDefaultGameMode=/Game/Framework/MultiplayerRPGGameMode_BP.MultiplayerRPGGameMode_BP_C
-ServerDefaultMap=/Game/Maps/ThirdPersonMap.ThirdPersonMap
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Framework/BP_RPGGameInstance.BP_RPGGameInstance_C
+GameDefaultMap=/Game/Maps/Menu/MainMenu.MainMenu
+ServerDefaultMap=/Game/Maps/ThirdPersonMap.ThirdPersonMap
+GlobalDefaultGameMode=/Script/MultiplayerRPG.MultiplayerRPGGameMode
+GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
