Solve Skill and UI don't work

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/Maps/Menu/MainMenu.MainMenu
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
