--- a/Saved/Config/WindowsEditor/Game.ini
+++ b/Saved/Config/WindowsEditor/Game.ini
@@ -1,7 +1,7 @@
 ;METADATA=(Diff=true, UseCommands=true)
 [/Script/DeveloperToolSettings.PlatformsMenuSettings]
 StagingDirectory=(Path="D:/Unreal5/MultiplayerRPG/Build")
-PerPlatformBuildTarget=(("Windows", "MultiplayerRPGServer"))
+PerPlatformBuildTarget=(("Windows", "MultiplayerRPG"))
 
 [StartupActions]
 bAddPacks=False
